force-app/main/default/objects/Invoice__c/fields/Line_Number1__c.field-meta.xml
<CustomField>
    <fullName>Line_Number1__c</fullName>
    <description>created to capture line number info for Consensus and KIS NL</description>
    <label>Line Number1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>