force-app/main/default/objects/Invoice__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <formula>&apos;1&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Number</label>
    <type>Text</type>
</CustomField>