force-app/main/default/objects/Invoice__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <label>May</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>