force-app/main/default/objects/Invoice__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <formula>if(ispickval(Billing_Period__c, &apos;Monthly&apos;), Amount__c, 
if(ispickval(Billing_Period__c, &apos;Annual&apos;), Amount__c/12, 
if(ispickval(Billing_Period__c, &apos;Bi-Annual&apos;), Amount__c/6, 
if(ispickval(Billing_Period__c, &apos;Quarterly&apos;), Amount__c/3,value(&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>