force-app/main/default/objects/Invoice__c/fields/NB_Description_Period__c.field-meta.xml
<CustomField>
    <fullName>NB_Description_Period__c</fullName>
    <description>KIS BIlling - Suppress True = Account Name + Appends Month YYYY(NB) + adds the Custom Invoice Description value or Suppress False = Standard Description + Appends Month YYYY(NB) + adds the Custom Invoice Description value for NB Invoice Descriptions</description>
    <formula>(Account__r.Name + &quot; - &quot; + DescMonthNB__c + &quot; &quot; + DescYearNB__c + &quot; - &quot; + Custom_Invoice_Description__c)</formula>
    <inlineHelpText>KIS BIlling - Suppress True = Account Name + Appends Month YYYY(NB) + adds the Custom Invoice Description value or Suppress False = Standard Description + Appends Month YYYY(NB) + adds the Custom Invoice Description value for NB Invoice Descriptions</inlineHelpText>
    <label>NB Invoice Description</label>
    <type>Text</type>
</CustomField>