force-app/main/default/objects/Invoice__c/fields/New_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Description__c</fullName>
    <label>New Business Description</label>
    <type>TextArea</type>
</CustomField>