force-app/main/default/objects/Invoice__c/fields/Non_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring__c</fullName>
    <formula>if(ispickval(Billing_Period__c,&apos;One-off&apos;),Amount__c,value(&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>