force-app/main/default/objects/Invoice__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <label>November</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>