force-app/main/default/objects/Invoice__c/fields/Opportunity_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Corp_ID__c</fullName>
    <formula>Opportunity__r.Corp_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Corp ID</label>
    <type>Text</type>
</CustomField>