force-app/main/default/objects/Invoice__c/fields/Oracle_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_ID__c</fullName>
    <label>Oracle Invoice ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>