force-app/main/default/objects/Invoice__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DR Offsite - KIS</fullName>
            </value>
            <value>
                <fullName>DR Onsite - KIS</fullName>
            </value>
            <value>
                <fullName>Enterprise Hybrid Backup Onsite - KIS - Asigra</fullName>
            </value>
            <value>
                <fullName>Enterprise - KIS - Asigra</fullName>
            </value>
            <value>
                <fullName>eVault</fullName>
            </value>
            <value>
                <fullName>Front-Server</fullName>
            </value>
            <value>
                <fullName>Managed Backup - KIS - Ahsay</fullName>
                <default>true</default>
                <label>Managed Backup - KIS - Ahsay</label>
            </value>
            <value>
                <fullName>Mobile - KIS</fullName>
            </value>
            <value>
                <fullName>Reselling Data Backup Equipment</fullName>
            </value>
            <value>
                <fullName>Send2Cloud</fullName>
            </value>
            <value>
                <fullName>Server Colocation - KIS</fullName>
            </value>
            <value>
                <fullName>Server Hosting - KIS</fullName>
            </value>
            <value>
                <fullName>TSM Cloud Backup</fullName>
            </value>
            <value>
                <fullName>Veeam Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Veeam DRAAS</fullName>
            </value>
            <value>
                <fullName>Veeam - KIS</fullName>
            </value>
            <value>
                <fullName>Workforce - KIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>