force-app/main/default/objects/Invoice__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <formula>January__c  +  February__c  +  March__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>