force-app/main/default/objects/Invoice__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <formula>April__c +  May__c +  June__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>