force-app/main/default/objects/Invoice__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <formula>July__c + August__c + September__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>