force-app/main/default/objects/Invoice__c/fields/Segment1__c.field-meta.xml
<CustomField>
    <fullName>Segment1__c</fullName>
    <description>Company Code is set by Oracle Billing Team; KIE = 705,  KUS = 105, KCA = 815, KUK = 625, KNL = 722</description>
    <formula>IF( Account__r.RecordType.Name ==&apos;Consensus: Account&apos;, &quot;100&quot;, 
CASE(LEFT(Account__r.Customer_ID2__c,3),
&quot;KIE&quot;,&quot;705&quot;,
&quot;KUS&quot;,&quot;105&quot;,
&quot;KCA&quot;,&quot;815&quot;,
&quot;KUK&quot;,&quot;625&quot;,
&quot;KNL&quot;,&quot;722&quot;,
null))</formula>
    <inlineHelpText>Company Code is set by Oracle Billing Team; KIE = 705,  KUS = 105, KCA = 815, KUK = 625, KNL = 722</inlineHelpText>
    <label>Segment1</label>
    <type>Text</type>
</CustomField>