force-app/main/default/objects/Invoice__c/fields/Segment2__c.field-meta.xml
<CustomField>
    <fullName>Segment2__c</fullName>
    <formula>LPAD(TEXT(0), 3, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment2</label>
    <type>Text</type>
</CustomField>