force-app/main/default/objects/Invoice__c/fields/Segment3__c.field-meta.xml
<CustomField>
    <fullName>Segment3__c</fullName>
    <formula>IF( Account__r.RecordType.Name ==&apos;Consensus: Account&apos;, &quot;4100&quot;, 
CASE( Billing_Period__c ,
&apos;Annual&apos;, &quot;41006&quot;,
&apos;Bi-Annual&apos;,&quot;41006&quot;,
&apos;Monthly&apos;,&quot;41001&quot;,
&apos;Quarterly&apos;,&quot;41001&quot;,
&apos;One-off&apos;,&quot;41001&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment3</label>
    <type>Text</type>
</CustomField>