force-app/main/default/objects/Invoice__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <label>September</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>