force-app/main/default/objects/Invoice__c/fields/Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Date__c</fullName>
    <label>Sign Up Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>