force-app/main/default/objects/Invoice__c/fields/Sign_Up_Month__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Month__c</fullName>
    <formula>IF(MONTH(Sign_Up_Date__c) = 1, &quot;January&quot;,
IF(MONTH(Sign_Up_Date__c) = 2, &quot;February&quot;,
IF(MONTH(Sign_Up_Date__c) = 3, &quot;March&quot;,
IF(MONTH(Sign_Up_Date__c) = 4, &quot;April&quot;,
IF(MONTH(Sign_Up_Date__c) = 5, &quot;May&quot;,
IF(MONTH(Sign_Up_Date__c) = 6, &quot;June&quot;,
IF(MONTH(Sign_Up_Date__c) = 7, &quot;July&quot;,
IF(MONTH(Sign_Up_Date__c) = 8, &quot;August&quot;,
IF(MONTH(Sign_Up_Date__c) = 9, &quot;September&quot;,
IF(MONTH(Sign_Up_Date__c) =10, &quot;October&quot;,
IF(MONTH(Sign_Up_Date__c) = 11, &quot;November&quot;,
IF(MONTH(Sign_Up_Date__c) = 12, &quot;December&quot;, &quot;Error&quot;
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Up Month</label>
    <type>Text</type>
</CustomField>