force-app/main/default/objects/Invoice__c/fields/Sign_Up_Year__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Year__c</fullName>
    <formula>Text(Year(Sign_Up_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Up Year</label>
    <type>Text</type>
</CustomField>