force-app/main/default/objects/Invoice__c/fields/Sign_Up_Year_Value__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Year_Value__c</fullName>
    <formula>YEAR( Sign_Up_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Up Year Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>