force-app/main/default/objects/Invoice__c/fields/Signup_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Signup_Month_Number__c</fullName>
    <formula>Month( Sign_Up_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signup Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>