force-app/main/default/objects/Invoice__c/fields/SOA_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>SOA_Integration_Status__c</fullName>
    <description>created attribute to capture SOA integration status for record sync.</description>
    <label>SOA Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>