force-app/main/default/objects/Invoice__c/fields/SOA_Response__c.field-meta.xml
<CustomField>
    <fullName>SOA_Response__c</fullName>
    <description>created to capture soa response from Oracle fusion</description>
    <label>SOA Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>