force-app/main/default/objects/Invoice__c/fields/Suppress_Standard_Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Standard_Invoice_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KIS - Invoice - If check box is Checked the Standard Description will NOT be added to Invoice  **Default Value is UnChecked**</description>
    <inlineHelpText>KIS - Invoice - If check box is Checked the Standard Description will NOT be added to Invoice  **Default Value is UnChecked**</inlineHelpText>
    <label>Suppress - Standard Invoice Description</label>
    <type>Checkbox</type>
</CustomField>