force-app/main/default/objects/Invoice__c/fields/Text_Brdate__c.field-meta.xml
<CustomField>
    <fullName>Text_Brdate__c</fullName>
    <formula>TEXT(Billing_Run_Date__c)</formula>
    <label>Text:Brdate</label>
    <type>Text</type>
</CustomField>