force-app/main/default/objects/Invoice__c/fields/Text_BrdateNB__c.field-meta.xml
<CustomField>
    <fullName>Text_BrdateNB__c</fullName>
    <formula>TEXT(TRX_Date_Calc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text:BrdateNB</label>
    <type>Text</type>
</CustomField>