force-app/main/default/objects/Invoice__c/fields/Total_Invoice_Amount_NB__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_NB__c</fullName>
    <formula>IF(


ISPICKVAL( Billing_Period__c ,&quot;Monthly&quot;), 

First_Month_Pro_Rated__c, 
Amount__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount NB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>