force-app/main/default/objects/Invoice__c/fields/Transaction_Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Number__c</fullName>
    <label>Transaction Type Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>