force-app/main/default/objects/Invoice__c/fields/TRX_Date__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date__c</fullName>
    <formula>TEXT(MONTH( TRX_Date_Calc__c ))+&quot;/&quot;
+TEXT(DAY(TRX_Date_Calc__c ))+&quot;/&quot;
+TEXT(YEAR(TRX_Date_Calc__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRX Date</label>
    <type>Text</type>
</CustomField>