force-app/main/default/objects/Invoice__c/fields/TRX_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date_Calc__c</fullName>
    <formula>IF(MONTH( Billing_Run_Date__c ) = 12,DATE(YEAR( Billing_Run_Date__c),MONTH(Billing_Run_Date__c),1)-1,
DATE(YEAR( Billing_Run_Date__c),MONTH(Billing_Run_Date__c),1)-1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRX Date Calc</label>
    <type>Date</type>
</CustomField>