force-app/main/default/objects/Invoice__c/fields/TRX_Date_Calc_NewMonth__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date_Calc_NewMonth__c</fullName>
    <description>Calculation for Oracle Invoice ID Billing run date updating.</description>
    <formula>DATE(IF(MONTH(Billing_Run_Date__c ) = 12, YEAR(Billing_Run_Date__c ) + 1, YEAR(Billing_Run_Date__c )),
IF(MONTH(Billing_Run_Date__c ) = 12, 1, MONTH(Billing_Run_Date__c ) + 1),
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRX_Date_Calc_NewMonth</label>
    <type>Date</type>
</CustomField>