force-app/main/default/objects/Invoice__c/fields/TRX_Date_Oracle_Bill__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date_Oracle_Bill__c</fullName>
    <description>Converts TRX Date Calc to DD-MM-YYYY</description>
    <formula>TEXT(DAY( TRX_Date_Calc__c ))+&quot;-&quot;
+TEXT(MONTH(TRX_Date_Calc__c ))+&quot;-&quot;
+TEXT(YEAR(TRX_Date_Calc__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts TRX Date Calc to DD-MM-YYYY</inlineHelpText>
    <label>TRX_Date_Oracle_Bill</label>
    <type>Text</type>
</CustomField>