force-app/main/default/objects/Invoice__c/fields/Updated_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Updated_Invoice_ID__c</fullName>
    <label>Updated Invoice ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>