force-app/main/default/objects/Invoice__c/fields/Usage_GB__c.field-meta.xml
<CustomField>
    <fullName>Usage_GB__c</fullName>
    <label>Usage (GB)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>