force-app/main/default/objects/Invoice__c/fields/VAT_Exempt__c.field-meta.xml
<CustomField>
    <fullName>VAT_Exempt__c</fullName>
    <formula>If( Account__r.VAT_Exempt__c = TRUE, &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Exempt</label>
    <type>Text</type>
</CustomField>