force-app/main/default/objects/Invoice__c/validationRules/Do_Not_Bill.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Bill</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.Do_Not_Bill__c =True</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>You cannot create an Invoice because &quot;Do Not Bill&quot; is checked for this account.</errorMessage>
</ValidationRule>