force-app/main/default/objects/Invoice__c/validationRules/Invoice_Reason_Status_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Reason_Status_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISPICKVAL( Invoice_Reason__c , &quot;&quot;)),
ISPICKVAL( Status__c ,&quot;Active&quot;)
)</errorConditionFormula>
    <errorDisplayField>Invoice_Reason__c</errorDisplayField>
    <errorMessage>You cannot choose an Invoice Reason if Status is &quot;Active&quot;.</errorMessage>
</ValidationRule>