force-app/main/default/objects/Invoice__c/validationRules/Invoice_Reason_Status_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Reason_Status_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Invoice_Reason__c ,&quot;&quot;),
ISPICKVAL( Status__c ,&quot;Inactive&quot;)
)</errorConditionFormula>
    <errorDisplayField>Invoice_Reason__c</errorDisplayField>
    <errorMessage>If Status is &quot;Inactive&quot; you must choose an Invoice Reason.</errorMessage>
</ValidationRule>