force-app/main/default/objects/Invoice__c/validationRules/No_Invoice_for_KIS_IC.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Invoice_for_KIS_IC</fullName>
    <active>false</active>
    <description>Does not allow an Invoice to be created for KeepItSafeIC record type.</description>
    <errorConditionFormula>Account__r.RecordType.DeveloperName = &quot;KeepItSafeIC&quot;</errorConditionFormula>
    <errorMessage>You cannot create an Invoice for a KeepItSafe IC Account.</errorMessage>
</ValidationRule>