force-app/main/default/objects/Invoice__c/listViews/KIS_US_Invoices.listView-meta.xml
<ListView>
    <fullName>KIS_US_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Bill_To__c</columns>
    <columns>Bill_To_Partner__c</columns>
    <columns>Sign_Up_Date__c</columns>
    <columns>Billing_Period__c</columns>
    <columns>Billing_Period_NB__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Header_Attribute4__c</field>
        <operation>startsWith</operation>
        <value>KUS-</value>
    </filters>
    <label>KIS US Invoices</label>
    <language>en_US</language>
    <sharedTo>
        <group>KeepItSafe</group>
        <group>KeepItSafe_US_Group</group>
    </sharedTo>
</ListView>